# AI-Voice-Assistant

./: .gitignore  CHECK_LIST.md  CLAUDE.md  CMakeLists.txt  README.md  bbb-toolchain.cmake  copy_to_bbb.sh  prepare.sh
.docs/: CHECK_LIST.md  PLAN.md  architecture.md  build_system.md  buildroot_setup.md  coding_guide.md  device_driver.md  env_setup.md  hardware_setup.md  server_setup.md  timeline.md  troubleshooting.md
.docs/audio/: audio_prep.md
.docs/development/: app_layer.md  coding_guide.md  device_driver.md  hal_layer.md  testing.md
.docs/hw-docs/am33xx_reference_manual/: ch01_introduction.md  ch02_memory_map.md  ch03_arm_mpu_subsystem.md  ch04_programmable_real_time_unit_subsystem_and_industrial_communication_subsystem_pru_icss.md  ch05_graphics_accelerator_sgx.md  ch06_interrupts.md  ch07_memory_subsystem.md  ch08_power_reset_and_clock_management_prcm.md  ch09_control_module.md  ch10_interconnects.md  ch11_enhanced_direct_memory_access_edma.md  ch12_touchscreen_controller.md  ch13_lcd_controller.md  ch14_ethernet_subsystem.md  ch15_pulse_width_modulation_subsystem_pwmss.md  ch16_universal_serial_bus_usb.md  ch17_interprocessor_communication.md  ch18_multimedia_card_mmc.md  ch19_universal_asynchronous_receiver_transmitter_uart.md  ch20_timers.md  ch21_i2c.md  index.md  (+6 more)
.docs/implementation/: 00-common.md  01-gpio-hal.md  02-audio-hal.md  03-display-hal.md  04-audio-pipeline.md  05-stt-client.md  06-llm-client.md  07-tts-engine.md  08-state-machine.md  09-button-controller.md  10-lvgl-ui.md  11-main-wiring.md  README.md
.docs/knowledge/: README.md  ai_server.md  audio_alsa.md  cross_compile.md  strategy_roadmap.md  threading_eventbus.md  touch_screen.md
app/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  Config.hpp  EventBus.hpp  Logger.hpp  Types.hpp  config.json
common/config/: default_config.json
hal/: CMakeLists.txt
hal/gpio/: GpioHal.cpp  GpioHal.hpp
hal/include/: IGpioHal.hpp
kernel/dts/: bbb_voice_assistant.dts
kernel/overlays/: BBB-VOICE-ASSISTANT.dts  copy_dtbo.sh
tests/: CMakeLists.txt  tsan.supp
tests/common/: EventBusTest.cpp
toolchain/: bbb-toolchain.cmake
(+1 files in other folders)
